Revert "fix(theme): fix the height collapse of media-icon image under the nav-screen"
This reverts commit 586992a9154395f22e74fe3a7b87182779ad6664.

--- a/packages/theme/src/client/modules/navbar/styles/nav-screen.scss
+++ b/packages/theme/src/client/modules/navbar/styles/nav-screen.scss
@@ -39,7 +39,8 @@
   }
 
   img.icon {
-    vertical-align: middle; 
+    vertical-align: -0.125em;
+    height: 1em;
   }
 }
 
